# expandroid.core

./: .gitignore  Taskfile.yml
src/expandroid_bringup/: CMakeLists.txt  package.xml
src/expandroid_bringup/config/: field.json
src/expandroid_bringup/launch/: expandroid.launch.py  expandroid_commander.launch.py  expandroid_control_node.launch.py  expandroid_hand.launch.py  expandroid_parameter_setup.launch.py
src/expandroid_commander/: package.xml  setup.cfg  setup.py
src/expandroid_commander/config/: field.json
src/expandroid_commander/expandroid_commander/: expandroid_commander.py  expandroid_parameter_setup.py  extend_joystick.py  get_speed_command.py  joystick_and_app.py
src/expandroid_commander/launch/: expandroid_commander.launch.py
src/expandroid_commander/scripts/: controller_server.py  servo.py
src/expandroid_controller/: CMakeLists.txt  package.xml
src/expandroid_controller/include/expandroid_controller/: expandroid_common.hpp  expandroid_controller.hpp  expandroid_trajectory.hpp
src/expandroid_controller/src/: expandroid_common.cpp  expandroid_control_node.cpp  expandroid_controller.cpp  expandroid_trajectory.cpp
src/expandroid_hand/: package.xml  setup.cfg  setup.py
src/expandroid_hand/expandroid_hand/: expandroid_hand.py
src/expandroid_main/: package.xml  setup.cfg  setup.py
src/expandroid_main/expandroid_main/: expandroid_main.py
src/expandroid_main/launch/: expandroid_main.launch.py
src/expandroid_msg/: CMakeLists.txt  package.xml
src/expandroid_msg/msg/: ExpandroidCommand.msg  ExpandroidState.msg
src/expandroid_msgs/: CMakeLists.txt  package.xml
src/expandroid_msgs/action/: TrajectoryTracking.action
src/expandroid_msgs/msg/: ExpandroidHandCommand.msg  JoyAndApp.msg
